- Subscribe feedback description alignment fixed

--- a/resources/css/scrumbs-stylesheet.css
+++ b/resources/css/scrumbs-stylesheet.css
@@ -965,9 +965,10 @@ transition: all .2s ease-in-out;
     margin: auto;
 }
 
-#error-footer, .secondary-text {
+#error-footer .secondary-text {
     max-width: 430px;
     padding-top: 30px;
+    margin: auto;
 }
 
 #error-footer .button-container {
